--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+
+        // room cypher maven
+        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
     }
 }
 rootProject.name = "RoomSample"
